--- a/amazone/package.json
+++ b/amazone/package.json
@@ -14,6 +14,8 @@
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.4.8",
     "axios": "^1.8.4",
+    "numeral": "^2.0.6",
+    "numeric": "^1.2.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
